--- a/package.xml
+++ b/package.xml
@@ -5,7 +5,7 @@
   <description>The creative_gesture_launch package</description>
 
   <maintainer email="inagaki@todo.todo">inagaki</maintainer>
-
+  <license>TOD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>pcl_msgs</build_depend>
   <build_depend>pcl_ros</build_depend>
